--- a/index.html
+++ b/index.html
@@ -24,6 +24,37 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <form>
+        <div>
+          <label for="name">Name:</label>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Please enter your name"
+            required
+          />
+        </div>
+        <div>
+          <label for="email">Email </label>
+          <input
+            type="text"
+            name="email"
+            id="email"
+            placeholder="Please enter email"
+            required
+          />
+        </div>
+        <div>
+          <label for="form-message">Message</label>
+          <textarea name="message" id="form-message"></textarea>
+        </div>
+        <div>
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+    </main>
   </body>
 </html>
-x
